related facts cleanup and spacing fix
MIMIR-626

--- a/src/main/resources/assets/styles/_relatedArticles.scss
+++ b/src/main/resources/assets/styles/_relatedArticles.scss
@@ -1,5 +1,5 @@
 .part-related-articles {
   & .row:first-of-type {
-    margin-top: $spacer * 3;
+    margin-top: $spacer * 1.5;
   }
 }
